--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.VehicleHmi">
         <activity
-            android:name=".MainActivity"
+            android:name=".View.MainActivity"
             android:exported="true"
             android:screenOrientation="landscape">
             <intent-filter>
@@ -23,10 +23,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".TrailerTire"
+        <activity android:name=".View.TrailerTire"
             android:exported="true"
             android:screenOrientation="landscape"/>
-        <activity android:name=".Keypad"
+        <activity android:name=".View.Keypad"
             android:exported="true"
             android:screenOrientation="landscape"/>
     </application>
